--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Link to Stylesheet-->
     <link href="main.css" rel="stylesheet" />
+    <!--Source in JavaScript file-->
+    <script src="hello.js"></script>
     <title>Tier 1 Summary</title>
 </head>
 <body>
